# cache-talk

./: .gitignore  README.md  RESULTS.md  pyproject.toml
data/: tasks.json
results/: grid_search.jsonl  run.jsonl
scripts/: diagnose_steering.py  grid_search.py
src/cache_talk/: __init__.py  __main__.py  agents.py  cli.py  eval.py  model.py  steering.py
tests/: test_smoke.py
