[project]
name = "cache-talk"
version = "0.1.0"
description = "Prototype: cache steering as a multi-agent communication protocol"
authors = [{name = "Hermes Agent"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.13",
    "transformers>=5.13",
    "accelerate>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
cache-talk = "cache_talk.cli:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
