[project]
name = "cache-talk"
version = "0.1.0"
description = "Prototype: cache steering as a multi-agent communication protocol"
authors = [{name = "Hermes Agent"}]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.11.0",
    "transformers>=5.13",
    "accelerate>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
cache-talk = "cache_talk.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
